--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,11 @@ body {
 h1 {
   font-size: 36px;
   background-color: blue;
+   padding: 50px;
+}
+p{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
