--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,5 @@ h1 {
    padding: 50px;
 }
 p{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+ padding: 20px 10px;  /* Vertical  Horizontal */
 }
