--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,37 @@
 body {
-  color: #FF0000;
-   background-color: #EEEEEE;
+  color: #407088;
+   background-color: #ffcbcb;
    font-size: 45px;    /* Light gray */
+}
+div.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+
+div.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 h1 {
   font-size: 36px;
-  background-color: blue;
+  background-color: #ffcbcb;
    padding: 50px;
+}
+h1:hover{
+  background-color: #ffb5b5
+}
+h2{
+
 }
 p{
  padding: 20px 10px;  /* Vertical  Horizontal */
