--- a/src/styles.css
+++ b/src/styles.css
@@ -132,13 +132,17 @@ Chnage backgriund color of dropdown button when content is shown*/
 .card{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 8px;
+  text-align: center;
 }
 
 .container{
   padding: 0 16px;
-
+  color: black;
 }
-
+.container a{
+  font-size: 16px;
+  
+}
 .container::after, .row::after{
   content: "";
   clear: both;
