--- a/src/styles.css
+++ b/src/styles.css
@@ -129,20 +129,39 @@ Chnage backgriund color of dropdown button when content is shown*/
   padding: 0 8px;
 }
 
+
 .card{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 8px;
+  padding-bottom: 5px;
   text-align: center;
+  border-color: black;
+  background-color: black;
+  color: white;
 }
+
 
 .container{
   padding: 0 16px;
+  
+}
+
+.card:hover{
+  background-color: white;
   color: black;
+  border-color: white;
 }
 .container a{
   font-size: 16px;
-  
+  color: #a96654;
+  padding: 4px;
 }
+.container a:hover{
+  
+  color: black;
+  text-decoration: none;
+}
+
 .container::after, .row::after{
   content: "";
   clear: both;
